client/src/styles/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
    'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
}

.group-table-wrapper {
  height: 600px;
  display: block;
  overflow-y: scroll;
  width: 100%;
}

.postcode-form {
  height: 3rem;
}

.postcode-input {
  margin-bottom: 0;
}

.full-width {
  width: 100%;
}

.blue {
  color: blue !important;
  cursor: pointer;
}

.small-margin-bottom {
  margin-bottom: 0.2rem !important;
}

.input-height {
  height: 4rem;
}

.App {
  display: grid;
  grid: 0fr 0fr 1fr 1fr 0fr / 1fr;
}

.App-Standalone {
  height: 100%;
  display: grid;
  grid: 0fr 0fr 1fr 1fr 0fr / 1fr;
}

.table-wrapper {
  position: relative;
  height: 28vh;
  overflow-y: scroll;
  border-bottom: solid white 20px;
}

.scroll-overlay {
  position: relative;
  display: block;
  margin: 0;
  padding: 0;
}

.scroll-overlay::after {
  content: '';
  position: absolute;
  top: -30px;
  height: 30px;
  left: 0px;
  right: 0px;
  background: linear-gradient(rgba(255, 255, 255, 0), rgb(255, 255, 255));
}

.search-padding {
  padding: 0 !important;
}

.group-map {
  height: 100%;
  /* margin-top: 20px;
  margin-bottom: 20px; */
}

.footer {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  padding: 2px;
  font-size: 0.8rem;
  text-align: center;
  border-top: 1px solid lightgray;
  height: 3rem;
}

.footer * {
  padding: 0 0.5rem;
}

.top-buttons {
  font-size: 1rem !important;
}

.embed-code {
  text-align: center;
  color: rgb(0, 123, 255);
  cursor: pointer;
}

.embed-code:hover {
  text-decoration: underline;
}

.link {
  cursor: pointer;
  color: rgb(0, 123, 255);
}

.link:hover {
  text-decoration: underline;
}

::placeholder {
  color: rgba(0, 0, 0, 0.3) !important;
  text-shadow: 0 0 0 rgba(0, 0, 0, 0.01);
}

.react-multi-email {
  padding: 0.375rem 0.75rem !important;
}

.react-multi-email div {
  padding: 0 0.5rem !important;
}

.focused {
  color: #495057;
  background-color: #fff;
  border-color: #80bdff;
  outline: 0;
  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
}

.react-multi-email span {
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial,
    'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol',
    'Noto Color Emoji';
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5;
  color: rgba(0, 0, 0, 0.3) !important;
  text-shadow: 0 0 0 rgba(0, 0, 0, 0.01);
  text-align: left;
  top: 0.2rem !important;
  padding: 0.2em;
}

.thrv_table {
  overflow-x: hidden !important;
}

#tcb_landing_page .footer .thrv_text_element a {
  border-bottom: none;
}

.tcb-mobile-table [data-css='tve-u-171214d9099'] td::before {
  width: calc(25% - 5px) !important;
}

.search-button-blue {
  background-color: rgb(0, 79, 202) !important;
}

:not(#tve) [data-css='tve-u-171214d9099'] {
  border: 1px solid rgb(220, 227, 233);
}

.tcb-mobile-table td {
  display: table-cell;
  position: relative;
  width: initial !important;
  padding-left: 0% !important;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

.tcb-mobile-table [data-css='tve-u-171214d9099'] td {
  padding-left: 0% !important;
}

:not(#tve) [data-css='tve-u-171214d9099'] > tbody > tr > td {
  border: none;
}

@media only screen and (max-width: 767px) {
  [data-css='tve-u-1711da6f4b6'] {
    padding: 0px !important;
    margin-bottom: 0px !important;
  }
}

